src/test/deca/context/valid/nonprovided/convfloat.deca
{
float i = 4.3f;
int j = 3;
i = j;
}
