src/test/deca/context/invalid/assign_type.deca
{
String a;
a = 4;
}
